--- a/index.html
+++ b/index.html
@@ -108,8 +108,118 @@
                         </div>
                     </div>
                 </div>
+                <div class="visits">
+                    <div class="status">
+                        <div class="info">
+                            <h3>Site Visits</h3>
+                            <h1>24.231</h1>
+                        </div>
+                        <div class="progresss">
+                            <svg>
+                                <circle cx="38" cy="38" r="36" />
+                            </svg>
+                            <div class="percentage">
+                                <p>-68%</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        <div class="searches">
+            <div class="status">
+                <div class="info">
+                    <h3>Searches</h3>
+                    <h1>14.231</h1>
+                </div>
+                <div class="progresss">
+                    <svg>
+                        <circle cx="38" cy="38" r="36" />
+                    </svg>
+                    <div class="percentage">
+                        <p>+21%</p>
+                    </div>
+                </div>
             </div>
-        </main>
+        </div>
+            </div>
+            <!-- End of analyses-->
+            <!-- New Users Section-->
+
+            <div class="new-user">
+                <h2>New User</h2>
+                <div class="user-list">
+                    <div class="user">
+                        <img src="./IMG_20191009_025934700.jpg" alt="">
+                        <h2>Osama</h2>
+                        <p>23 Min Ago</p>
+                    </div>
+                    <div class="user">
+                        <img src="./358113346_3603770293188407_7038378004107556325_n.jpg" alt="">
+                        <h2>Osama</h2>
+                        <p>23 Min Ago</p>
+                    </div>
+                    <div class="user">
+                        <img src="./387056853_3633087537012142_2743665894758194934_n.jpg" alt="">
+                        <h2>Saied</h2>
+                        <p>55 Min Ago</p>
+                    </div>
+                    <div class="user">
+                        <img src="./download.jpeg" alt="">
+                        <h2>More</h2>
+                        <p>New User</p>
+                    </div>
+                </div>
+            </div>
+            <!-- End Users Section-->
+<div class="recent-orders">
+    <h2>Recent Orders</h2>
+    <table>
+        <thead>
+            <tr>
+                <th>Course Name</th>
+                <th>Course Number</th>
+                <th>Payment</th>
+                <th>Status</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
+    <a href="#">Show All</a>
+</div>
+<!-- End of Recent Orders -->
+
+</main>
+<!-- End of Main Content -->
+
+<!-- Right Section -->
+<div class="right-section">
+    <div class="nav">
+        <button id="menu-btn">
+            <span class="material-icons-sharp">
+                menu
+            </span>
+        </button>
+        <div class="dark-mode">
+            <span class="material-icons-sharp active">
+                light_mode
+            </span>
+            <span class="material-icons-sharp">
+                dark_mode
+            </span>
+        </div>
+
+        <div class="profile">
+            <div class="info">
+                <p>Hey, <b>Reza</b></p>
+                <small class="text-muted">Admin</small>
+            </div>
+            <div class="profile-photo">
+                <img src="images/profile-1.jpg">
+            </div>
+        </div>
+
+    </div>
+
 
     </div>
 <script src="index.js"></script>
